--- a/src/App.scss
+++ b/src/App.scss
@@ -15,7 +15,7 @@
 }
 
 .row {
-  height: 100px;
+  height: 80px;
   width: 400px;
 }
 
@@ -28,6 +28,15 @@
     cursor: pointer;
   }
   p {
-    line-height: 4;
+    line-height: 1;
+    font-size: 25px;
   }
+}
+
+#input {
+  background-color: blue;
+}
+
+#action {
+  background-color: grey;
 }
